测试SecurityManager的过程